unpackaged/main/default/objects/ProgramEnrollment/ProgramEnrollment.object-meta.xml
<CustomObject>
    <sharingModel>Private</sharingModel>
</CustomObject>