unpackaged/main/default/objects/ProgramEnrollment/fields/Admissions_Director__c.field-meta.xml
<CustomField>
    <fullName>Admissions_Director__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Admissions Director</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Director_Enrollments</relationshipName>
    <type>Lookup</type>
</CustomField>