unpackaged/main/default/objects/ProgramEnrollment/fields/Canvas_User_ID__c.field-meta.xml
<CustomField>
    <fullName>Canvas_User_ID__c</fullName>
    <label>Canvas User ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>