unpackaged/main/default/objects/ProgramEnrollment/fields/Clock_Hours_Completed__c.field-meta.xml
<CustomField>
    <fullName>Clock_Hours_Completed__c</fullName>
    <label>Clock Hours Completed</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>