unpackaged/main/default/objects/ProgramEnrollment/fields/Cumulative_GPA__c.field-meta.xml
<CustomField>
    <fullName>Cumulative_GPA__c</fullName>
    <label>Cumulative GPA</label>
    <precision>4</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>