unpackaged/main/default/objects/ProgramEnrollment/fields/Originating_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Originating_Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Originating Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipName>Opportunity_Enrollments</relationshipName>
    <type>Lookup</type>
</CustomField>