unpackaged/main/default/objects/ProgramEnrollment/fields/Sage_Intacct_Customer_ID__c.field-meta.xml
<CustomField>
    <fullName>Sage_Intacct_Customer_ID__c</fullName>
    <label>Sage Intacct Customer ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>