unpackaged/main/default/objects/ProgramEnrollment/fields/Scheduled_Graduation_Date__c.field-meta.xml
<CustomField>
    <fullName>Scheduled_Graduation_Date__c</fullName>
    <label>Scheduled Graduation Date</label>
    <type>Date</type>
</CustomField>