unpackaged/main/default/objects/ProgramEnrollment/fields/Total_Clock_Hours_Required__c.field-meta.xml
<CustomField>
    <fullName>Total_Clock_Hours_Required__c</fullName>
    <label>Total Clock Hours Required</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>