unpackaged/main/default/objects/ProgramEnrollment/fields/Total_Credits_Earned__c.field-meta.xml
<CustomField>
    <fullName>Total_Credits_Earned__c</fullName>
    <label>Total Credits Earned</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>