unpackaged/main/default/objects/ProgramEnrollment/fields/VA_Chapter_Certified__c.field-meta.xml
<CustomField>
    <fullName>VA_Chapter_Certified__c</fullName>
    <label>VA Funding Certified</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Chapter 33 (Post 9/11)</fullName>
            </value>
            <value>
                <fullName>Chapter 30 (Montgomery)</fullName>
            </value>
            <value>
                <fullName>Chapter 31 (VR&amp;E)</fullName>
            </value>
            <value>
                <fullName>Chapter 35 (DEA)</fullName>
            </value>
            <value>
                <fullName>SkillBridge</fullName>
            </value>
            <value>
                <fullName>Non-VA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>