unpackaged/main/default/objects/ProgramEnrollment/fields/Withdrawal_Effective_Date__c.field-meta.xml
<CustomField>
    <fullName>Withdrawal_Effective_Date__c</fullName>
    <label>Withdrawal Effective Date</label>
    <type>Date</type>
</CustomField>