unpackaged/main/default/objects/ProgramEnrollment/fields/Withdrawal_Reason__c.field-meta.xml
<CustomField>
    <fullName>Withdrawal_Reason__c</fullName>
    <label>Withdrawal Reason</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Academic Dismissal</fullName>
            </value>
            <value>
                <fullName>Attendance Violation</fullName>
            </value>
            <value>
                <fullName>Financial</fullName>
            </value>
            <value>
                <fullName>Personal / Family</fullName>
            </value>
            <value>
                <fullName>Medical</fullName>
            </value>
            <value>
                <fullName>Employment Conflict</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>